add strucrute of hero section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,4 @@
-//@import "bootstrap";
+@import "bootstrap";
 
  @import 'utils/mixins';
  @import 'utils/variables';
@@ -9,4 +9,4 @@
 //  @import 'vendors/slick-theme';
 //  @import 'vendors/slick';
 
-//  @import 'layout/topper';
+ @import 'layout/hero';
