--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,7 +1,7 @@
-$main-font: 'Bitter', serif;
-$second-font: 'Segoe UI', sans-serif;
-$main-accent-color: #59b7c2;
-$main-text-color: #777777;
+$main-font: Roboto, sans-serif;
+$main-accent-color: #fa4f01;
+$second-color: #a8ca3f;
+$main-text-color: #444444;
 
 $breakpoints: (
   'small-min': (min-width: 320px),
