--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 $main-font: Roboto, sans-serif;
-$main-accent-color: #fa4f01;
-$second-color: #a8ca3f;
+$main-accent-color: #ff6b00;
+$second-accent-color: #a8ca3f;
 $main-text-color: #444444;
 
 $breakpoints: (
