--- a/src/sass/base/_basic.scss
+++ b/src/sass/base/_basic.scss
@@ -23,6 +23,7 @@ a {
 body {
     position: relative;
     overflow-x: hidden;
+    color: $main-text-color;
 }
 
 body,
@@ -40,6 +41,4 @@ li {
 
 .container {
     max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
 }
