non-effective section added

--- a/src/sass/layout/_consequences.scss
+++ b/src/sass/layout/_consequences.scss
@@ -79,7 +79,8 @@
         margin-top: 75px;
     }
 }
-.statistic {
+
+.section-footer {
     &__text {
         padding: 40px 90px;
         text-align: center;
