--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,27 +3,51 @@
     padding-top: 15px;
     background: url("../img/main-bg.png") 50% -228px no-repeat;
     position: relative;
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        position: relative;
+    }
+}
+
+@media (max-width: 1150px) {
+    .hero {
+        background-position: 60% -228px;
+        .container {
+            justify-content: space-around;
+        }
+    }
 }
 
 .logo {
+    &__title {
+        margin-bottom: 15px;
+    }
     &__link {
         font-size: 0;
+    }
+    &__img {
+        max-width: none;
     }
 }
 
 .bulits {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     &__item {
         max-width: 225px;
+        margin-bottom: 50px;
         display: flex;
         align-items: center;
         &:not(:first-child) {
-            margin-left: 30px;
+            margin-left: 12px;
         }
     }
     &__text {
         margin-bottom: 0;
-        padding-left: 55px;
+        padding-left: 50px;
         font-size: 16px;
         font-style: italic;
         color: #666666;
@@ -37,7 +61,10 @@
             background-image: url("../img/bulit-icon-1.png");
         }
         &_advise {
+            padding-left: 55px;
             background-image: url("../img/bulit-icon-2.png");
+            background-position: 20px 50%;
+
         }
         &_stat {
             background-image: url("../img/bulit-icon-3.png");
@@ -46,6 +73,11 @@
 }
 
 .promo {
+    display: flex;
+    justify-content: flex-end;
+    &__wrapper {
+        max-width: 700px;
+    }
     &__title {
         padding-bottom: 44px;
         font-size: 44px;
@@ -83,6 +115,16 @@
     }
 }
 
+.half-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.features-wrapper {
+    flex-basis: 50%;
+}
+
 .features-list {
     position: relative;
     &::before {
@@ -93,7 +135,7 @@
         display: block;
         background: url("../img/arrow-2-in-1.png") no-repeat;
         left: 25px;
-        top: 48%;
+        top: 50%;
         transform: translateY(-50%);
     }
     &__item {
@@ -126,6 +168,7 @@
 }
 
 .order-form {
+    flex-basis: 270px;
     &__wrapper {
         padding: 48px 18px 18px;
         border: 7px solid $second-accent-color;
@@ -141,9 +184,10 @@
             width: 49px;
             height: 233px;
             position: absolute;
-            right: -33px;
+            right: -24px;
             top: 200px;
             background: url("../img/arrow-form.png") 0 0 no-repeat;
+            transform: scaleX(0.7);
         }
     }
     &__delivery {
@@ -170,6 +214,15 @@
         display: block;
         font-weight: 500;
         color: $main-accent-color;
+    }
+    &__prices {
+        display: flex;
+    }
+    &__prices-wrapper {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 50%;
+        text-align: center;
     }
     &__old-price {
         color: #666666;
@@ -262,7 +315,7 @@
         font-size: 18px;
         color: #333333;
     }
-    &__secure-info {
+    &__secure {
         padding: 15px 15px 15px 45px;
         font-size: 14px;
         color: #666666;
@@ -277,9 +330,8 @@
 
 .product-photo {
     position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-100%);
+    bottom: -125px;
+    left: -80px;
     &__wrapper {
         position: relative;
     }
@@ -298,6 +350,41 @@
             top: 115px;
             left: 440px;
             background-color: $second-accent-color;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .product-photo {
+        position: static;
+        &__wrapper {
+            margin-top: 40px;
+        }
+    }
+}
+
+@media (max-width: 430px) {
+    .product-photo__price {
+        &_primary {
+            top: -15px;
+            left: 190px;
+        }
+        &_secondary {
+            top: 70px;
+            left: 230px;
+        }
+    }
+}
+
+@media (max-width: 580px) {
+    .product-photo__price {
+        &_primary {
+            top: -15px;
+            left: 250px;
+        }
+        &_secondary {
+            top: 70px;
+            left: 300px;
         }
     }
 }
