fix media for hero section

--- a/src/sass/layout/_consequences.scss
+++ b/src/sass/layout/_consequences.scss
@@ -31,6 +31,15 @@
     }
 }
 
+@media (max-width: 700px) {
+    .section-header__title {
+        font-size: 40px;
+    }
+    .section-header__subtitle {
+        font-size: 20px;
+    }
+}
+
 .consequences {
     &__list {
         display: flex;
