--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -363,28 +363,44 @@
     }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 429px) {
+    .product-photo {
+        display: none;
+    }
+    // .product-photo__price {
+    //     &_primary {
+    //         top: -15px;
+    //         left: 100px;
+    //     }
+    //     &_secondary {
+    //         top: 70px;
+    //         left: 150px;
+    //     }
+    // }
+}
+
+@media (min-width: 430px) and (max-width: 579px) {
     .product-photo__price {
         &_primary {
             top: -15px;
-            left: 190px;
+            left: 210px;
         }
         &_secondary {
             top: 70px;
-            left: 230px;
+            left: 280px;
         }
     }
 }
 
-@media (max-width: 580px) {
-    .product-photo__price {
-        &_primary {
-            top: -15px;
-            left: 250px;
-        }
-        &_secondary {
-            top: 70px;
-            left: 300px;
-        }
-    }
-}
+// @media (max-width: 580px) {
+//     .product-photo__price {
+//         &_primary {
+//             top: -15px;
+//             left: 250px;
+//         }
+//         &_secondary {
+//             top: 70px;
+//             left: 300px;
+//         }
+//     }
+// }
