--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -327,6 +327,11 @@
         background: #eef2f7 url("../img/icon-guard.png") 28px 50% no-repeat;
     }
 }
+@media (max-width:580px) {
+    .order-form__delivery {
+        background-color: #f7f9fb;
+    }
+}
 
 .product-photo {
     position: absolute;
