--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -58,6 +58,7 @@
         font-size: 16px;
         font-style: italic;
         color: #666666;
+        line-height: 21px;
         &_advise,
         &_stat,
         &_type {
