_grid.scss move to base folder

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,8 +2,7 @@
  @import 'utils/variables';
 
  @import 'base/basic';
-
- @import 'grid/grid';
+ @import 'base/grid';
 
  @import 'layout/section';
  @import 'layout/hero';
