--- a/src/sass/layout/_consequences.scss
+++ b/src/sass/layout/_consequences.scss
@@ -3,6 +3,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        counter-reset: consequences-counter;
     }
     &__item {
         max-width: 344px;
@@ -23,19 +24,14 @@
         flex-basis: 50%;
         position: relative;
         &::after {
-            content: "1";
+            content: counter(consequences-counter);
+            counter-increment: consequences-counter;
             display: block;
             position: absolute;
             left: 155px;
             top: 20px;
             font-size: 30px;
             color: #ffffff;
-        }
-        &_amputation::after {
-            content: "2";
-        }
-        &_wound::after {
-            content: "3";
         }
     }
     &__photo {
